<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.promocodedetails.ui.PromoCodeDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/app_name"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="-10dp"
                android:src="@drawable/back_arrow"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/favoriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/favorites" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:background="@color/white"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="30dp"
            android:padding="10dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/promoCodetxt"
                    style="@style/text_dark_bold_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingVertical="10dp" />

                <TextView
                    android:id="@+id/copyBtn"
                    style="@style/text_secondary_bold_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingVertical="10dp"
                    android:text="@string/copy" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/storeTxt"
                style="@style/text_medium_white_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:maxLines="2"
                android:layout_toLeftOf="@+id/openLinkBtn"
                android:paddingVertical="0dp"
                android:text="@string/store" />

            <TextView
                android:id="@+id/openLinkBtn"
                style="@style/text_secondary_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:paddingVertical="0dp"
                android:text="@string/open_link" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@color/white" />

        <TextView
            style="@style/text_medium_white_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:paddingTop="10dp"
            android:text="@string/expiry_date" />

        <TextView
            android:id="@+id/expireDatetxt"
            style="@style/text_medium_white_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dates" />

        <TextView
            style="@style/text_medium_white_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:paddingTop="10dp"
            android:text="@string/terms_and_conditions" />

        <TextView
            android:id="@+id/termsConditiontxt"
            style="@style/text_medium_white_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>